tests/error/match_errors/unsupported_subject_tuple.err
Error: Unsupported (at $FILE:7:10)
  | 
5 | def main(x: int, y: int) -> None:
6 |     t = (x, y)
7 |     match t:
  |           ^ Pattern matching on Tuple is not supported

Guppy compilation failed due to 1 previous error
